# HelloWorldJNI

./: README.md  settings.gradle.kts
app/: build.gradle.kts  build.gradle.kts_  jnitask.gradle.kts
app/src/main/java/org/kmp/jni/: HelloWorld.java
app/src/main/jni/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
app/src/main/jni/toolchains/: toolchain-linux-x86_64-by-zig.cmake  toolchain-linux-x86_64_by_zig.cmake  toolchain-linux.cmake  toolchain-macos.cmake  toolchain-win-x86_64-by-mingw.cmake  toolchain-win.cmake  toolchain-windows-x86_64-zig.cmake  toolchain-windows-x86_64_by_zig.cmake
app/src/test/java/org/kmp/jni/: ExampleUnitTest.kt
